[metadata]
name = loss_checker
version = 0.6.1
author = Dmitry Yakovlev
author_email = opensuse12@gmail.com
description = Loss Checker
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
url = https://github.com/jok4r/loss_checker

[options]
python_requires = >=3.5
include_package_data = True
packages=find:
install_requires =
    ovcfg
    oe_common >= 1.3.0

[options.package_data]
* = cfg/*
hello = *.msg